cosmos_ws/log/build_2024-04-07_15-04-51/communication_pkg/stdout_stderr.log
running egg_info
writing ../../build/communication_pkg/communication_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/communication_pkg/communication_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/communication_pkg/communication_pkg.egg-info/entry_points.txt
writing requirements to ../../build/communication_pkg/communication_pkg.egg-info/requires.txt
writing top-level names to ../../build/communication_pkg/communication_pkg.egg-info/top_level.txt
reading manifest file '../../build/communication_pkg/communication_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/communication_pkg/communication_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying communication_pkg/SerialCommunication.py -> /home/vini_dunker/COSMOS-AFS/cosmos_ws/build/communication_pkg/build/lib/communication_pkg
running install
running install_lib
copying /home/vini_dunker/COSMOS-AFS/cosmos_ws/build/communication_pkg/build/lib/communication_pkg/SerialCommunication.py -> /home/vini_dunker/COSMOS-AFS/cosmos_ws/install/communication_pkg/lib/python3.10/site-packages/communication_pkg
byte-compiling /home/vini_dunker/COSMOS-AFS/cosmos_ws/install/communication_pkg/lib/python3.10/site-packages/communication_pkg/SerialCommunication.py to SerialCommunication.cpython-310.pyc
  File "/home/vini_dunker/COSMOS-AFS/cosmos_ws/install/communication_pkg/lib/python3.10/site-packages/communication_pkg/SerialCommunication.py", line 45
    if(msg.from_node != "SerialCommunication")
                                              ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/vini_dunker/COSMOS-AFS/cosmos_ws/install/communication_pkg/lib/python3.10/site-packages/communication_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/communication_pkg/communication_pkg.egg-info to /home/vini_dunker/COSMOS-AFS/cosmos_ws/install/communication_pkg/lib/python3.10/site-packages/communication_pkg-0.0.0-py3.10.egg-info
running install_scripts
Installing SerialCommunication script to /home/vini_dunker/COSMOS-AFS/cosmos_ws/install/communication_pkg/lib/communication_pkg
writing list of installed files to '/home/vini_dunker/COSMOS-AFS/cosmos_ws/build/communication_pkg/install.log'
